--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,36 @@
 version: 2.1
 
 jobs:
-  build:
+  buildClient:
     docker:
       - image: circleci/python:3.6.4
     steps:
       - checkout
-      - run: python3 Server.py
-      - run: python3 Client.py
-  test:
+      - run: python3 -m py_compile Client.py
+  buildServer:
     docker:
       - image: circleci/python:3.6.4
     steps:
       - checkout
-      - run: python3 tests/client_test.py
-
+      - run: python3 -m py_compile Server.py
+  buildServerShell:
+    docker:
+      - image: circleci/python:3.6.4
+     steps:
+      - checkout
+      - run: python3 -m py_compile server-shell.py
+   buildClientShell:
+    docker:
+      - image : circleci/python:3.6.4
+    steps:
+      - checkout
+      - run: python3 -m py_compile client-shell.py
+  
 
 workflows:
-    "Start client":
+    "Build All":
         jobs:
-          - build
-          - test
+          - buildClient
+          - buildServer
+          - buildServerShell
+          - buildClientShell
