--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,38 +6,41 @@ jobs:
       - image: circleci/python:3.6.4
     steps:
       - checkout
-      - run: sudo pip install -r requirements.txt
+      - run: sudo pip3 install -r requirements.txt
       - run: python3 -m py_compile src/Client.py
   build-server:
     docker:
       - image: circleci/python:3.6.4
     steps:
       - checkout
-      - run: sudo pip install -r requirements.txt
+      - run: sudo pip3 install -r requirements.txt
       - run: python3 -m py_compile src/Server.py
   build-app:
     docker:
       - image: circleci/python:3.6.4
     steps:
       - checkout
-      - run: sudo pip install -r requirements.txt
+      - run: sudo pip3 install -r requirements.txt
       - run: python3 -m py_compile src/App.py
   build-shell-client:
     docker:
       - image : circleci/python:3.6.4
     steps:
       - checkout
-      - run: sudo pip install -r requirements.txt
+      - run: sudo pip3 install -r requirements.txt
       - run: python3 -m py_compile src/client-shell.py
   run-tests:
     docker:
         - image : circleci/python:3.6.4
     steps:
         - checkout
-        - run: sudo pip install -r requirements.txt
+        - run: sudo pip3 install -r requirements.txt
         - run: mkdir reports
         - run: pytest --junitxml=test-reports/junit.xml
-
+        - store_test_results:
+            path: reports
+        - store_artifacts:
+            path: reports
 workflows:
     "Build All":
         jobs:
