--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,34 +7,35 @@ jobs:
     steps:
       - checkout
       - run: sudo pip3 install -r requirements.txt
-      - run: python3 -m py_compile src/Client.py
+      - run: python3 -m py_compile src/Client/Client.py
   build-server:
     docker:
       - image: circleci/python:3.6.4
     steps:
       - checkout
       - run: sudo pip3 install -r requirements.txt
-      - run: python3 -m py_compile src/Server.py
+      - run: python3 -m py_compile src/Server/Server.py
   build-app:
     docker:
       - image: circleci/python:3.6.4
     steps:
       - checkout
       - run: sudo pip3 install -r requirements.txt
-      - run: python3 -m py_compile src/App.py
+      - run: python3 -m py_compile App.py
   build-shell-client:
     docker:
       - image : circleci/python:3.6.4
     steps:
       - checkout
       - run: sudo pip3 install -r requirements.txt
-      - run: python3 -m py_compile src/client-shell.py
+      - run: python3 -m py_compile client-shell.py
   run-tests:
     docker:
         - image : circleci/python:3.6.4
     steps:
         - checkout
         - run: sudo pip3 install -r requirements.txt
+        - run: pip install -U pytest
         - run: mkdir reports
         - run: pytest --junitxml=test-reports/junit.xml
         - store_test_results:
