--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: sudo pip3 install -r requirements.txt
-      - run: python3 -m py_compile src/Client/Client.py
+      - run: python3 -m py_compile src/Client/MainWindow.py
   build-server:
     docker:
       - image: circleci/python:3.6.4
@@ -35,7 +35,7 @@ jobs:
     steps:
         - checkout
         - run: sudo pip3 install -r requirements.txt
-        - run: pip install -U pytest
+        - run: sudo pip install -U pytest
         - run: mkdir reports
         - run: pytest --junitxml=test-reports/junit.xml
         - store_test_results:
